# gitlatex

./: .gitignore  README.md  compiler.py  package-lock.json  package.json  pyproject.toml  server.js
gitlatex/: __init__.py  __main__.py  server.py
gitlatex/public/: app.js  index.html  style.css
public/: app.js  bib-commands.json  index.html  latex-commands.json  style.css
