[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlatex"
version = "1.0.6"
description = "A simple UI for LaTeX projects with Git support. Clone repos, edit, compile, and push."
readme = "README.md"
license = "ISC"
keywords = ["latex", "git", "ide", "editor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: LaTeX",
]
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0",
    "gitpython>=3.1",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/abdussamiakanda/gitlatex"
Documentation = "https://github.com/abdussamiakanda/gitlatex#readme"
Repository = "https://github.com/abdussamiakanda/gitlatex"

[project.scripts]
gitlatex = "gitlatex.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitlatex*"]

[tool.setuptools.package-data]
gitlatex = ["public/**"]
